exports[`test can be active 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can be inactive 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "transition": "backgroundColor 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom delay 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms linear 2222ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom duration 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 9999ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom easing 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms ease-in-out 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom entry delay 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms linear 2222ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom entry duration 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom entry easing 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom exit delay 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom exit duration 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom exit easing 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom style 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "color": "yellow",
      "transition": "backgroundColor 600ms linear 0ms",
    }
  }>
  Children
</div>
`;

exports[`test can have a custom timing 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms cubic-bezier(0.250, 0.250, 0.750, 0.750) 0ms",
    }
  }>
  Children
</div>
`;

exports[`test prefers easing over timing 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "transition": "backgroundColor 600ms ease-in-out 0ms",
    }
  }>
  Children
</div>
`;
